Fix alignment of skills

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -62,3 +62,7 @@ $break-x-large: 1200px;
   }
 }
 
+.inline-icon {
+  width: 18px;
+  height: 18px;
+}
