--- a/app/assets/stylesheets/skill.scss
+++ b/app/assets/stylesheets/skill.scss
@@ -1,23 +1,49 @@
+// Source: https://codepen.io/pearlberry/pen/VeOOKJ?page=6
+
 .left{
   position: relative;
-  width: 50%;
+  width: 100%;
   float: left;
-  text-align: right;
+  text-align: center;
+  @media screen and (min-width: 576px) {
+    text-align: right;
+    width: 50%;
+  }
 }
 
 .right {
   position: relative;
-  width: 50%;
+  width: 100%;
   float: right;
-  text-align: left;
+  text-align: center;
+  @media screen and (min-width: 576px) {
+    text-align: left;
+    width: 50%;
+  }
 }
 
 .skills-bar-container {
   position: relative;
-  width: 40%;
-  min-width: 350px;
-  margin: 5% auto;
+  width: 80%;
+  min-width: 80%;
+  margin: 0;
   list-style: none;
+  margin: 5% auto;
+
+  @media screen and (min-width: 576px) {
+    width: 50%;
+    min-width: 200px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 40%;
+    min-width: 300px;
+  }
+
+  @media screen and (min-width: 991px) {
+    width: 40%;
+    min-width: 350px;
+  }
 }
 
 .skills-bar-container li {
